--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<title>Teri Adrian </title>
+	<title>Adrian Teri</title>
 
 	<link rel="icon" href="img/adrianteri_1461891460_7.jpg" type="image/png" />
 
