--- a/index.html
+++ b/index.html
@@ -25,21 +25,19 @@
 </head>
 <body>
 	<main>
-               <div class="profile-image">
+        <div class="profile-image">
                      <img src="img/adrianteri_1461891460_7.jpg"></img>
-               </div>
-		<div class="intro">Teri Adrian</div>
+        </div>
+		<div class="intro">Adrian Teri</div>
 		<div class="tagline"> Gamer | Student | Tech enthusiast | Developer</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/Adrianteri"><i class="fab fa-github"></i></a>
-			<a target="_blank" href="https://twitter.com/adrianteri"><i class="fab fa-twitter"></i></a>
-			<a target="_blank" href="https://fouresquare.com/adrianteri"><i class="fab fa-foursquare"></i></a>
 			<a target="_blank" href="https://ke.linkedin.com/in/adrianteri"><i class="fab fa-linkedin"></i></a>
 			<a target="_blank" href="https://medium.com/@adrianteri"><i class="fab fa-medium"></i></a>
-			<a target="_blank" href="https://www.goodreads.com/adrianteri"><i class="fab fa-goodreads-g"></i></a>
-			<a target="_blank" href="https://www.reddit.com/AdrianTeri"><i class="fab fa-reddit"></i></a>
-               </div>
+		<footer>
+				&copy; 2020 Adrianteri. All Rights Reserved
+		</footer>	   
 	</main>
 </body>
 </html>
