Update photo, favicon and add Gitlab icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 	<title>Adrian Teri</title>
 
-	<link rel="icon" href="img/adrianteri_1461891460_7.jpg" type="image/png" />
+	<link rel="icon" href="img/adrian-github-io.jpg" type="image/jpeg" />
 
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
@@ -26,13 +26,14 @@
 <body>
 	<main>
         <div class="profile-image">
-                     <img src="img/adrianteri_1461891460_7.jpg"></img>
+                     <img src="img/adrian-github-io.jpg"></img>
         </div>
 		<div class="intro">Adrian Teri</div>
 		<div class="tagline"> Gamer | Student | Tech enthusiast | Developer</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/Adrianteri"><i class="fab fa-github"></i></a>
+			<a target="_blank" href="https://gitlab.com/Adrianteri"><i class="fab fa-gitlab"></i></a>
 			<a target="_blank" href="https://ke.linkedin.com/in/adrianteri"><i class="fab fa-linkedin"></i></a>
 			<a target="_blank" href="https://medium.com/@adrianteri"><i class="fab fa-medium"></i></a>
 		<footer>
