--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                      <img src="img/adrian-github-io.jpg"></img>
         </div>
 		<div class="intro">Adrian Teri</div>
-		<div class="tagline"> Gamer | Student | Tech enthusiast | Developer</div>
+		<div class="tagline"> Gamer | Student | Tech enthusiast | Software and DevOps Engineer</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/Adrianteri"><i class="fab fa-github"></i></a>
