Add a robots.txt file and a meta tag required for verification and control of Google crawling this site.

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta name="google-site-verification" content="pPus_C7lIghYEZRPb_bpBkyDkrcqXkCT4tot0MlALdU" /> <!-- Tag required for Google Search console to control crawl rates -->
 	<title>Adrian Teri</title>
 
 	<!--favicon -->
-<!-- 	<link rel="icon" href="_assets/images/adrian-github-io.jpg" type="image/jpeg" /> -->
 	<link rel="icon" type="image/jpg" size="32x32" href="/assets/images/adrian-github-favicon.jpg">
 
 	<!-- Fonts -->
